[package]
name = "folder-rs"
version = "0.1.0"
authors = ["Lilis Iskandar <lilis@veand.co>"]
edition = "2018"

[profile.release]
#opt-level = 'z'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "folder-rs-web"
]

[lib]
path = "src/lib.rs"

[[bin]]
name = "folder"
path = "src/bin.rs"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
path = "src/benches/bench.rs"
harness = false

[dependencies]
csv = "1.1"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
serde_json = "^1.0.59"
json_dotpath = "^1.1.0"
