[package]
name = "folder-web"
version = "0.1.0"
authors = ["Lilis Iskandar <lilis@veand.co>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
csv = "1.1.6"
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"]  }
js-sys = "0.3.51"
wasm-bindgen-futures = "0.4.24"
serde = { version = "1.0.126", features = ["derive"] }
serde_derive = "^1.0.126"
serde_json = "^1.0.64"
json_dotpath = "^1.1.0"
console_error_panic_hook = { version = "^0.1.6", optional = true }

[dependencies.web-sys]
version = "0.3.51"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
  'console',
]